--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "team-todo-list",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://rusovd.github.io/team-todo-list",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
